# adbgath

./: .gitignore  .shellcheckrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  README.md  adbgath.sh  adbgath.sh.v1  config.example.sh  pyproject.toml  security-report.json  security-report.md
.git-backup/: README.md
.github/: tucortedo-migration-trigger.txt
.github/workflows/: android-emulator.yml  ci.yml  tucortedo-migration-issue-runner.yml  tucortedo-migration-runner.yml  windows-installer.yml
docs/: IMPLEMENTATION_REPORT.md  MIGRATION_V2_TO_V3.md  OFFLINE_INSTALL.md  PLUGIN_API.md  QUICKSTART.md  SECURITY.md  WEB_UI.md  WINDOWS.md
examples/: README.md  apks.txt  packages.txt  replacements.txt  usage_examples.sh
installers/linux/: install.sh  portable.sh  uninstall.sh
installers/windows/: install.cmd  install.ps1  portable.cmd  portable.ps1  uninstall.cmd  uninstall.ps1
lib/: adb.sh  apps_permissions.sh  collect.sh  config.sh  device.sh  discovery.sh  doctor.sh  download.sh  findings.sh  help.sh  info.sh  install.sh  inventory.sh  list.sh  logs.sh  reporting.sh  rules.sh  security.sh  sniff.sh  utils.sh
src/adbgath/: __init__.py  adb.py  branding.py  cli.py  errors.py  models.py  service.py  validation.py  webapp.py
src/adbgath/core/: __init__.py  capabilities.py  diffing.py  evidence.py  files.py  jobs.py  operations.py  reports.py  storage.py  updater.py
src/adbgath/frida/: __init__.py
src/adbgath/modules/: __init__.py  apk.py
src/adbgath/plugins/: __init__.py
src/adbgath/rules/: __init__.py
src/adbgath/rules/builtin/: device.py  (+1 more)
tests/: conftest.py  test_adb_wrapper.py  test_adb_wrapper.sh  test_branding.py  test_cli.py  test_completion_features.py  test_cross_platform.py  test_roadmap.py  test_rules.sh  test_service.py  test_updater_plugins.py  test_validation.py  test_web.py
(+6 files in other folders)
