[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adbgath"
version = "3.2.9"
description = "Cross-platform defensive Android/ADB assessment toolkit with CLI and local web UI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "IsdarlinM"}]
keywords = ["adb", "android", "security", "pentesting", "mobile", "owasp-mastg"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Information Technology",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "python-multipart>=0.0.20,<1.0",
  "reportlab>=4.2,<5",
]

[project.optional-dependencies]
full = [
  "frida-tools>=13",
]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "httpx>=0.28,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
adbgath = "adbgath.cli:main"
adbgath-web = "adbgath.webapp:main"

[project.urls]
Homepage = "https://github.com/IsdarlinM/adbgath"
Repository = "https://github.com/IsdarlinM/adbgath"
Issues = "https://github.com/IsdarlinM/adbgath/issues"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adbgath = ["web/static/*", "frida/scripts/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM"]
ignore = ["S603", "E501", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
